force-app/main/default/objects/qualifying__c/qualifying__c.object-meta.xml
<CustomObject>
    <label>Qualifying</label>
    <nameField>
        <label>qualifying Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifyings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>