force-app/main/default/objects/qualifying__c/fields/driverId__c.field-meta.xml
<CustomField>
    <fullName>driverId__c</fullName>
    <externalId>true</externalId>
    <label>driverId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>