force-app/main/default/objects/qualifying__c/fields/Q1__c.field-meta.xml
<CustomField>
    <fullName>Q1__c</fullName>
    <label>Q1</label>
    <type>Time</type>
</CustomField>