force-app/main/default/objects/qualifying__c/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <label>Q2</label>
    <type>Time</type>
</CustomField>