force-app/main/default/objects/qualifying__c/fields/Q3__c.field-meta.xml
<CustomField>
    <fullName>Q3__c</fullName>
    <label>Q3</label>
    <type>Time</type>
</CustomField>